--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@react-navigation/native-stack": "^6.1.0",
+    "axios": "^0.21.4",
     "expo": "~42.0.1",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
+    "js-cookie": "^3.0.1",
     "react": "16.13.1",
     "react-dom": "^17.0.2",
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.2.0",
+    "react-native-router-flux": "^4.3.1",
+    "react-native-safe-area-context": "latest",
     "react-native-screens": "~3.4.0",
     "react-native-unimodules": "~0.14.5",
     "react-native-web": "^0.17.1"
