--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-navigation/native-stack": "^6.1.0",
     "axios": "^0.21.4",
     "expo": "~42.0.1",
