--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "web": "expo start --web",
-    "start": "react-native start"
+    "start": "react-native run-android"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
